feature: make CORS allowed origins configurable via environment variable; set CORS_ALLOWED_ORIGINS for Cloud Run deployment;