@@ -1,5 +1,6 @@
 package com.roxana.taskbuddy;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.Customizer;
@@ -12,6 +13,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -19,6 +21,9 @@ import java.util.List;
 class SecurityConfig {
 
     private final CustomAuthenticationEntryPoint authenticationEntryPoint;
+
+    @Value("${cors.allowed-origins:http://localhost:5173,http://localhost:3000,http://localhost,http://127.0.0.1,http://frontend}")
+    private String allowedOrigins;
 
     public SecurityConfig(CustomAuthenticationEntryPoint authenticationEntryPoint) {
         this.authenticationEntryPoint = authenticationEntryPoint;
@@ -49,15 +54,7 @@ class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // Permitem explicit toate sursele posibile din mașina locală și Docker
-        configuration.setAllowedOrigins(List.of(
-                "http://localhost",
-                "http://127.0.0.1",
-                "http://localhost:5173",
-                "http://localhost:3000",
-                "http://frontend",
-                "http://backend:8080"
-        ));
+        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
         configuration.setExposedHeaders(List.of("Authorization"));
